gke/api-gateway/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - name: api-gateway
      port: 8080
      targetPort: 8080
